--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                     <button class="pin__keypad__key" id="9">9</button>
                     <button class="pin__keypad__key" >↵</button>
                 </div>
+                <div class="pin__keypad__row">
+                    <button style="width: 90%;" class="pin__keypad__key" id="0">0</button>
+                </div>
         </div>
     </div>
 
